# ld57

./: .gitignore  .rust-analyzer.json  Cargo.toml  Makefile.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: native.yml  package.yml  wasm.yml
art/: chad-walk.aseprite  dev.aseprite  dream.aseprite  field.aseprite  house.aseprite  islands.aseprite  pallete-dream.aseprite  pallete.gpl  room.aseprite  sleeping.aseprite  vitarikku.aseprite  world_map.aseprite
assets/: credits.txt  player.json  vitalic.json
src/: controls.rs  main.rs  state.rs  update.rs  wasm.rs
src/controls/: key.rs  mod.rs
src/dialog/: chains.rs  chains_interlude.rs  chains_level1.rs  chains_level21.rs  chains_level22.rs  chains_level32.rs  handler.rs  mod.rs
src/interact/: mod.rs
src/level/: interlude.rs  level1.rs  level21.rs  level22.rs  level31.rs  level32.rs  level33.rs  level4.rs  level41.rs  mod.rs  rules.rs  test.rs
src/player/: camera.rs  mod.rs
src/sprite/: data.rs  mod.rs  simple.rs
web/: index.html
