[package]
name = "ld57"
version = "0.1.0"
edition = "2024"

[dependencies]
alpacker = { git = "https://github.com/zatrit/alpacker.git", default-features = false, features = [
  "aseprite",
  "raylib",
  "tarzst",
] }
anyhow = "1.0.97"
rand = "0.9.0"
raylib = "5.5"
serde = "1.0.219"

[features]
default = ["fs"]

fs = ["alpacker/fs"]
web = []

[build-dependencies]
alpacker = { git = "https://github.com/zatrit/alpacker.git" }
alpacker-packer = { git = "https://github.com/zatrit/alpacker.git" }
