[package]
name = "ld57"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
alpacker = { git = "https://github.com/zatrit/alpacker.git", default-features = false, features = [
  "aseprite",
  "raylib",
  "tarzst",
] }
raylib = "5.5"
rand = "0.9.0"
aseprite = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }

[features]
default = ["fs"]

fs = ["alpacker/fs"]
extra-debug = ["anyhow/backtrace"]

[build-dependencies]
alpacker = { git = "https://github.com/zatrit/alpacker.git" }
alpacker-packer = { git = "https://github.com/zatrit/alpacker.git" }

[profile.dev]
#panic = "abort"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
#panic = "abort"
